# gebt

./: .buildinfo  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  bib.html  convention.html  genindex.html  index.html  input.html  install.html  objects.inv  output.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build_sphinx_doc.yml
_sources/: convention.md.txt  index.rst.txt  install.md.txt  output.rst.txt
doc/: Doxyfile  GEBTExamples.ppt  requirements.txt
doc/source/: bib.rst  conf.py  convention.rst  index.rst  input.md  input.rst  output.md
examples/: RotatingBeam.dat.ech  RotatingBeam.dat.ini  RotatingBeamSin.dat.ech  RotatingBeamSin.dat.ini  SteadyState.dat.ech  SteadyState.dat.ini  cantilever1.dat.ech  cantilever2.dat.ech  cantilever3.dat.ech  cantilever3.dat.ini  cantilever4.dat.ech  cantilever5.dat.ech  cantilever5.dat.ini  cantilever6.dat.ech  cantilever6.dat.ini  cantilever7.dat.ech  cantilever7.dat.ini  cantilever8.dat.ech  cantilever8.dat.ini  eigen.dat.ech  eigen000_00.dat.ech  eigen000_30.dat.ech  eigen000_45.dat.ech  eigen500_00.dat.ech  eigen500_30.dat.ech  eigen500_45.dat.ech  eigen750_00.dat.ech  eigen750_000.dat.ech  eigen750_001.dat.ech  eigen750_002.dat.ech  eigen750_30.dat.ech  eigen750_45.dat.ech  flap.dat.ech  flap2.dat.ech  flap2.dat.ini  followerforce.dat.ech  fork.dat.ech  fork.dat.ini  jgGreen.dat.ini  jw.dat.ech  (+7 more)
src/: Analysis.f90  CPUtime.f90  EigenSolve.f90  Element.f90  GlobalDataFun - Copy (2).f90  GlobalDataFun - Copy.f90  GlobalDataFun.f90  IO.f90  InternalData.f90  Member.f90  Preprocess.f90  Preprocess.stiff.f90  PrescribedCondition.f90  Solve.f90  System.f90  TimeFunction.f90  ddep.f  lapack.f  ma28.f  main.f90  mc19.f
src/archive/: arpack - Copy.f  blas.f  blas_new.f
test/alberto/: curve-test.dat.ech  curve-test2.dat.ech  test-case-v2.dat.ech
test/asdaque/: Untitled.ipynb  rotatingbeam_rpm750_eigen.dat.ech  rotatingbeam_rpm750_steadystate.dat.ech  rotatingbeam_rpm750_transient.dat.ech  rotatingbeam_rpm750_transient.dat.ini  rotatingbeam_static.dat.ech
test/daniel/: IO.f90  YuGEBT.py
test/daniel/gebt_input/: gebt_input_time_step=2_iter=1  gebt_input_time_step=2_iter=1.ech  gebt_input_time_step=2_iter=1.ini
test/dynamics/: rotatingbeam_notes.ipynb  rotatingbeam_rpm000_eigen_free.dat.ech  rotatingbeam_rpm000_transient_forced_squared.dat.ech  rotatingbeam_rpm000_transient_forced_squared_2.dat.ech  rotatingbeam_rpm000_transient_forced_squared_3.dat.ech  rotatingbeam_rpm250_steadystate.dat.ech  rotatingbeam_rpm500_steadystate.dat.ech  rotatingbeam_rpm750_eigen.dat.ech  rotatingbeam_rpm750_steadystate.dat.ech  rotatingbeam_rpm750_transient.dat.ech  rotatingbeam_static.dat.ech
test/dynamics/.ipynb_checkpoints/: rotatingbeam_notes-checkpoint.ipynb
test/issues/i1 - not enough eigenvalues/: blade_box_eigen.dat.ech
test/issues/i2 - zero eigenvalue/: blade_box_eigen.dat.ech
test/issues/i3 - eigenvalue order/: bm_uh60a_tm_eigen.dat.ech
test/naca0015/: gebt.deb  naca0015_gebt.dat.ech
test/salman/: cantilever4-2.dat.ech  cantilever4.dat.ech  cantilever4.dat.ini  thinbeamDYN.dat.ech  thinbeamDYN.dat.ini  thinbeamSTAT.dat.ech  thinbeamSTATIC.dat.ech
test/simple/: cantilever1.dat.ech  eigen.dat.ech  eigenvectors.xlsx
test/strip/: baselines.xml  basepoints.dat.ech  layups.xml  license  materials.xml  strip.msh  strip.xml  strip_aniso.msh  strip_aniso.xml  strip_aniso_manual_vabs.dat.K  strip_aniso_manual_vabs.dat.ech  strip_aniso_manual_vabs.dat.opt  strip_aniso_manual_vabs.dat.v0  strip_aniso_manual_vabs.dat.v1S  strip_aniso_manual_vabs.dat.v22  strip_aniso_vabs.dat.K  strip_aniso_vabs.dat.ech  strip_aniso_vabs.dat.opt  strip_aniso_vabs.dat.v0  strip_aniso_vabs.dat.v1S  strip_aniso_vabs.dat.v22  strip_iso_gebt_eigen_000_45.dat.ech  strip_iso_gebt_eigen_750_45.dat.ech  strip_iso_gebt_steadystate.dat.ech  strip_manual.xlsx  strip_manual_vabs.dat.K  strip_manual_vabs.dat.ech  strip_manual_vabs.dat.v0  strip_manual_vabs.dat.v1S  strip_manual_vabs.dat.v22  strip_ortho.xml  strip_ortho_manual_vabs.dat.K  strip_ortho_manual_vabs.dat.ech  strip_ortho_manual_vabs.dat.v0  strip_ortho_manual_vabs.dat.v1S  strip_ortho_manual_vabs.dat.v22  strip_ortho_vabs.dat.K  strip_ortho_vabs.dat.ech  strip_ortho_vabs.dat.v0  strip_ortho_vabs.dat.v1S  (+7 more)
test/thomas/: baselines.xml  box.sg  box.sg.K  box.sg.ech  box.sg.opt  box.sg.v0  box.sg.v1S  box.sg.v22  box.xml  cantilever1.dat.ech  cantilever2.dat.ech  cantilever3.dat.ech  file_gebt.dat.ech  file_gebt_su.dat.ech  layups.xml  materials.xml  sec1.dat.v22  sec1_new.dat.K  sec1_new.dat.ech  sec1_new.dat.opt  sec1_new.dat.v0  sec1_new.dat.v1S  sec1_new.dat.v22
test/thomas/PureTraction/: vabsBat.bat
test/thomas/PureTraction/vabsFiles/: sec1.dat.K  sec1.dat.ech  sec1.dat.v0  sec1.dat.v1S
test/thomas_ricard/: torque.dat.ech  torque.txt  torque2.dat.ech
test/thomas_ricard/FlexionBeamUponXAndY/: FlexionBeamUponX.dat.ech  FlexionBeamUponY.dat.ech
test/thomas_ricard/torque/: Presentation1.pptx  torque.dat.ech
test/vr7/: eigen_rs0.dat.ech  eigen_rs20.dat.ech  eigen_rs40.dat.ech  eigen_rs60.dat.ech
test/yonggang_techsim/: Problem_Description.pptx  eigen_001_new.dat.ech  gebt.exe.stackdump
tools/: Makefile  build_all_mingw-64_cygwin.bat  build_ifx.bat  build_msvc.bat  gebtMake  make-win-ifx.mak
